--- a/css/main.css
+++ b/css/main.css
@@ -8,20 +8,44 @@ html {
   width: 300px;
 
   background: transparent url("../images/clock-face.svg") no-repeat center center;
+
+  position: relative;
 }
 
 .center {
   width: 28px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .hand {
   width: 14px;
+
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .hand-hour {
-
+  transform-origin: center bottom;
+  animation: time 6s linear infinite;
 }
 
 .hand-minute {
+  transform-origin: center bottom;
+  animation: time 1s linear infinite;
+}
 
+@keyframes time {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
